# quantum-ald-simulation

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: tests.yml
data/geometries/: h2.xyz  h2o.xyz  lih.xyz
docs/: methodology.md  scientific_background.md  technical_background.md  workflow.md
notebooks/: 01_classical_preprocessing.ipynb  02_active_space_selection.ipynb  03_vqe_noiseless_simulation.ipynb  04_noisy_vqe_simulation.ipynb  05_reaction_energy_profile.ipynb
results/: h2_validation_summary.json
results/tables/: h2_energy_curve.csv  h2_energy_curve.json  h2_vqe_results.json
scripts/: plot_energy_profile.py  run_h2_energy_curve.py  run_h2_vqe.py  run_hf.py  run_vqe.py  validate_h2_pipeline.py  validate_install.py  validate_lih_pipeline.py
src/quantum_ald/: __init__.py  _optional.py  active_space.py  classical_methods.py  error_mitigation.py  hamiltonian_mapping.py  molecule_loader.py  noise_models.py  plotting.py  vqe_solver.py
tests/: test_active_space.py  test_error_mitigation.py  test_h2_energy_curve.py  test_lightweight_imports.py  test_lih_pipeline.py  test_mapping_validation.py  test_molecule_loader.py  test_plotting.py  test_qubit_mapping_validation.py  test_scripts.py  test_vqe_fallback.py  test_vqe_solver.py
