[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-ald-simulation"
version = "0.1.0"
description = "Hybrid quantum-classical simulation workflow for Atomic Layer Deposition reactions"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Karim El Houdaigui" }]
keywords = ["quantum", "chemistry", "ALD", "VQE", "HPC", "PySCF", "Qiskit"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "numpy>=1.23.0",
  "scipy>=1.9.0",
  "matplotlib>=3.5.0",
  "pandas>=1.5.0",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
chemistry = ["pyscf>=2.1.0", "openfermion>=1.4.0", "openfermion-pyscf>=0.5"]
quantum = [
  "qiskit>=0.42.0",
  "qiskit-nature>=0.6.0",
  "qiskit-aer>=0.12.0",
  "qiskit-algorithms>=0.2.0",
  "qiskit-ibm-runtime>=0.13.0",
]
notebooks = ["jupyter>=1.0.0", "ipython>=8.0.0"]
dev = ["pytest>=7.0.0", "pytest-cov>=3.0.0", "black>=22.0.0", "flake8>=4.0.0", "mypy>=0.950"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39", "py310"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
